[gd_scene load_steps=30 format=3 uid="uid://bmy1hldxwv88y"]

[ext_resource type="Script" path="res://src/Menus/main_menu.gd" id="1_srb4k"]
[ext_resource type="Texture2D" uid="uid://cll1poahstv1g" path="res://assets/environment/Witch Hut.png" id="3_04lfy"]
[ext_resource type="Texture2D" uid="uid://c8gubf6aexvuj" path="res://assets/environment/Background Layers/Back Layer BG.png" id="3_rs408"]
[ext_resource type="Texture2D" uid="uid://catkb7twl3yae" path="res://assets/Title Card.png" id="3_twbp8"]
[ext_resource type="Texture2D" uid="uid://cnw4128xknuaw" path="res://assets/environment/Mushroom 2.png" id="3_uoqxy"]
[ext_resource type="FontFile" uid="uid://cnw6mdsr7r60" path="res://assets/temp/GrapeSoda.ttf" id="3_vpkc1"]
[ext_resource type="Texture2D" uid="uid://bl8ls8huslpmi" path="res://assets/environment/Mushroom 3.png" id="4_5bway"]
[ext_resource type="Texture2D" uid="uid://cufgg1ds6ksn" path="res://assets/environment/Mushroom 5.png" id="5_tvo7s"]
[ext_resource type="Texture2D" uid="uid://ib20j5ft6qku" path="res://assets/environment/Fungus 2.png" id="6_1ugtl"]
[ext_resource type="Texture2D" uid="uid://diqx4jmn1ihhv" path="res://assets/environment/Fungus 1.png" id="7_dvigj"]
[ext_resource type="Texture2D" uid="uid://cod2a7nivtwd7" path="res://assets/characters/Witch.png" id="9_edvmp"]
[ext_resource type="Texture2D" uid="uid://dlvmrjxj4h6el" path="res://assets/characters/Roller.png" id="9_tt44s"]
[ext_resource type="Texture2D" uid="uid://bd7xvumabrvgo" path="res://assets/environment/Mushroom 4.png" id="10_w0hor"]
[ext_resource type="Texture2D" uid="uid://cxh8xjinsnjmq" path="res://assets/ui/blank_btn1.png" id="13_nym8j"]
[ext_resource type="Texture2D" uid="uid://bcxg0dbnvkdc6" path="res://assets/ui/blank_btn3.png" id="14_jn6j5"]
[ext_resource type="Texture2D" uid="uid://bkvtkmuv5gkwy" path="res://assets/ui/blank_btn2.png" id="14_w3awr"]
[ext_resource type="Texture2D" uid="uid://bsjdlysty8c8d" path="res://assets/ui/blank_btn_thin1.png" id="16_2xmcm"]
[ext_resource type="Texture2D" uid="uid://bd701kuyysegq" path="res://assets/ui/blank_btn_thin3.png" id="17_yiiri"]
[ext_resource type="Texture2D" uid="uid://brgeptv8wecke" path="res://assets/ui/blank_btn_thin2.png" id="18_qlrrk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3toh"]
atlas = ExtResource("9_edvmp")
region = Rect2(0, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g5mg"]
atlas = ExtResource("9_edvmp")
region = Rect2(15, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffw1d"]
atlas = ExtResource("9_edvmp")
region = Rect2(30, 0, 15, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd8k8"]
atlas = ExtResource("9_edvmp")
region = Rect2(45, 0, 15, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_1xokc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3toh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g5mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffw1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd8k8")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yc85f"]
atlas = ExtResource("9_tt44s")
region = Rect2(0, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2vfe"]
atlas = ExtResource("9_tt44s")
region = Rect2(32, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq028"]
atlas = ExtResource("9_tt44s")
region = Rect2(64, 0, 32, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0v46"]
atlas = ExtResource("9_tt44s")
region = Rect2(96, 0, 32, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1j0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc85f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2vfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq028")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0v46")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_srb4k")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rs408")
expand_mode = 1

[node name="MainScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MainScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 180.0
grow_horizontal = 2
texture = ExtResource("3_twbp8")

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.5
offset_top = -88.0
offset_right = 155.5
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect2" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("3_uoqxy")

[node name="TextureRect4" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_5bway")

[node name="TextureRect5" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("5_tvo7s")

[node name="TextureRect6" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_1ugtl")

[node name="TextureRect7" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("7_dvigj")

[node name="TextureRect" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_04lfy")

[node name="TextureRect" type="AnimatedSprite2D" parent="MainScreen/HBoxContainer/TextureRect"]
position = Vector2(36.5, 46)
sprite_frames = SubResource("SpriteFrames_1xokc")
animation = &"new_animation"
frame_progress = 0.315086

[node name="TextureRect2" type="AnimatedSprite2D" parent="MainScreen/HBoxContainer/TextureRect"]
position = Vector2(101.5, 78)
sprite_frames = SubResource("SpriteFrames_f1j0x")
animation = &"new_animation"
frame_progress = 0.535436
offset = Vector2(0.5, 0.5)

[node name="TextureRect8" type="TextureRect" parent="MainScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("10_w0hor")

[node name="MainMenuOptions" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.627778
anchor_bottom = 0.627778
offset_left = 39.0
offset_top = -40.0
offset_right = 94.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Start" type="TextureButton" parent="MainScreen/MainMenuOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_nym8j")
texture_pressed = ExtResource("14_jn6j5")
texture_hover = ExtResource("14_w3awr")
texture_disabled = ExtResource("14_jn6j5")
texture_focused = ExtResource("14_w3awr")

[node name="CenterContainer" type="CenterContainer" parent="MainScreen/MainMenuOptions/Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainScreen/MainMenuOptions/Start/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.419608, 0.0745098, 0.258824, 1)
text = "Start!"

[node name="Credits" type="TextureButton" parent="MainScreen/MainMenuOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_nym8j")
texture_pressed = ExtResource("14_jn6j5")
texture_hover = ExtResource("14_w3awr")
texture_disabled = ExtResource("14_jn6j5")
texture_focused = ExtResource("14_w3awr")

[node name="CenterContainer" type="CenterContainer" parent="MainScreen/MainMenuOptions/Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -8.0
offset_right = 23.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainScreen/MainMenuOptions/Credits/CenterContainer"]
layout_direction = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.419608, 0.0745098, 0.258824, 1)
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MainScreen/MainMenuOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("16_2xmcm")
texture_pressed = ExtResource("17_yiiri")
texture_hover = ExtResource("18_qlrrk")
texture_disabled = ExtResource("17_yiiri")
texture_focused = ExtResource("18_qlrrk")

[node name="CenterContainer" type="CenterContainer" parent="MainScreen/MainMenuOptions/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainScreen/MainMenuOptions/Quit/CenterContainer"]
layout_direction = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.419608, 0.0745098, 0.258824, 1)
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_right = 49.0
offset_bottom = 147.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="CreditsScreen/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.105882, 0.0784314, 0.0980392, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 32
text = "Credits"
horizontal_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="CreditsScreen/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="RichTextLabel" parent="CreditsScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0.105882, 0.0784314, 0.0980392, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("3_vpkc1")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Thomas Gelman: [color=#AAAAAA] Programming, Design, Audio [/color]
Faye Glynn: [color=#AAAAAA] Programming, Design, Management [/color]
Jack Grace: [color=#AAAAAA] Programming, Design [/color]
Pranav Krishna Kumar: [color=#AAAAAA] Level Design [/color]
Max Eddington: [color=#AAAAAA] Art, Design [/color]
Lainey Harding:  [color=#AAAAAA] Art, Design [/color]
"
fit_content = true
autowrap_mode = 0

[node name="Main" type="TextureButton" parent="CreditsScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_nym8j")
texture_pressed = ExtResource("14_jn6j5")
texture_hover = ExtResource("14_w3awr")
texture_disabled = ExtResource("14_jn6j5")
texture_focused = ExtResource("14_w3awr")

[node name="CenterContainer" type="CenterContainer" parent="CreditsScreen/HBoxContainer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsScreen/HBoxContainer/Main/CenterContainer"]
layout_direction = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.419608, 0.0745098, 0.258824, 1)
text = "Return"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainScreen/MainMenuOptions/Start" to="." method="StartGame"]
[connection signal="pressed" from="MainScreen/MainMenuOptions/Credits" to="." method="OpenCredits"]
[connection signal="pressed" from="MainScreen/MainMenuOptions/Quit" to="." method="Quit"]
[connection signal="pressed" from="CreditsScreen/HBoxContainer/Main" to="." method="OpenMainMenu"]
